--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -16,9 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
-"(n%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 #: models/views.py:117
 msgid "hello"
 msgstr ""
@@ -37,81 +35,81 @@ msgstr ""
 
 #: templates/404.html:4
 msgid "Sahifa topilma"
-msgstr "Страница Не Найдена"
+msgstr "Page not found"
 
 #: templates/404.html:16
 msgid "Sahifa Topilmadi"
-msgstr "Страница Не Найдена"
+msgstr "Page not found"
 
 #: templates/404.html:17
 msgid ""
 "Kechirasiz, siz qidirgan sahifa bizning veb-saytimizda mavjud emas! Ehtimol, "
 "bizning uy sahifamizga o'ting yoki qidiruvdan foydalanishga harakat "
 "qilasizmi?"
-msgstr "Извините, страница, которую вы искали, недоступна на нашем сайте! Может, зайти на нашу домашнюю страницу или попробовать воспользоваться поиском?"
+msgstr "Sorry, the page you are looking for is not available on our website! Maybe go to our home page or try to use the search?"
 
 #: templates/404.html:18 templates/pages/success.html:16
 msgid "Bosh sahifaga qaytish"
-msgstr "Вернуться на главную страницу"
+msgstr "Home page return"
 
 #: templates/base.html:51
 msgid "Bosh sahifa"
-msgstr "Главная страница"
+msgstr "Home Page"
 
 #: templates/base.html:52 templates/base.html:87 templates/index.html:42
 #: templates/pages/about.html:4 templates/pages/about.html:18
 msgid "Biz haqimizda"
-msgstr "О нас"
+msgstr "About us"
 
 #: templates/base.html:53 templates/base.html:88 templates/index.html:15
 #: templates/index.html:73 templates/pages/courses.html:15
 msgid "Mahsulotlar"
-msgstr "Продукты"
+msgstr "Products"
 
 #: templates/base.html:54 templates/base.html:89 templates/base.html:94
 #: templates/pages/contact.html:5 templates/pages/contact.html:15
 msgid "Aloqa"
-msgstr "Связь"
+msgstr "Contact"
 
 #: templates/base.html:86
 msgid "Havolalar"
-msgstr "Ссылки"
+msgstr "Links"
 
 #: templates/base.html:90
 msgid "Videolar"
-msgstr "Видео"
+msgstr "Videos"
 
 #: templates/base.html:91
 msgid "Ish Jarayoni"
-msgstr "Рабочий Процесс"
+msgstr "Proccess of work"
 
 #: templates/base.html:95 templates/pages/contact.html:27
 msgid "Tashkent Index D2 block"
-msgstr "Ташкентский индексный блок D2"
+msgstr "Tashkent Index D2 block"
 
 #: templates/base.html:106
 msgid "Galeriya"
-msgstr "Галерея"
+msgstr "Gallery"
 
 #: templates/base.html:117
 msgid ""
 "Bizning ustunliklarimiz online analitika va tulov tizimlari orqali ishlashi, "
 "hamda aparatning barcha elektronika ishlari sifatli unalishi va "
 "yig’ilishidir !"
-msgstr "Наши преимущества заключаются в том, что он работает через онлайн-аналитику и платежные системы, а также в том, что вся аппаратная электроника работает качественно и собранно !"
+msgstr "Bizning ustunliklarimiz online analitika va tulov tizimlari orqali ishlashi, hamda aparatning barcha elektronika ishlari sifatli unalishi va yig’ilishidir !"
 
 #: templates/index.html:4
 msgid "Bosh sahifa "
-msgstr "Главная страница"
+msgstr "Home page"
 
 #: templates/index.html:18 templates/index.html:83
 #: templates/pages/courses.html:25
 msgid "Buyurtma berish"
-msgstr "Заказать"
+msgstr "Order"
 
 #: templates/index.html:43 templates/pages/about.html:19
 msgid "Promoyga xush kelibsiz !"
-msgstr "Добро пожаловать в промо !"
+msgstr "Welcome to Promoy"
 
 #: templates/index.html:44 templates/pages/about.html:20
 msgid ""
@@ -131,70 +129,70 @@ msgid ""
 "muvaffaqiyatlaringizni birga qura boshlaylik! Biz bilan biznesingizni yo’lga "
 "quyib, daromat kurishni boshlang! Promoy-barakali biznes sari birga qadam "
 "tashlaymiz"
-msgstr "Promoy-это надежный партнер, который способствует вашему успеху благодаря высококачественным услугам и инновационным решениям. Мы поможем вам построить автомойку самообслуживания с нуля. Наша компания использует оборудование высочайшего качества и предлагает пульты управления, работающие на платах собственного авторства. Наши преимущества заключаются в работе с онлайн-аналитикой и платежными системами, а также в качественной сборке и сборке всей аппаратной электроники. Гарантия качества и работоспособности пультов управления составляет 1 год. Наша цель-обеспечить индивидуальный подход и профессиональное обслуживание каждого из наших клиентов. Наша опытная команда предоставляет лучшие решения в соответствии с вашими потребностями. Мы следим за технологиями и тенденциями, поэтому вы всегда можете воспользоваться современными и эффективными услугами. foydalanasiz.Biz свяжитесь с нами и давайте вместе начнем строить свой будущий успех! Начните свой бизнес с нами и начните получать прибыль! Давайте вместе сделаем шаг к бизнесу, благословленному промо"
+msgstr "Promoy is a reliable partner that contributes to your success with high-quality services and innovative solutions. We will help you build a self-service coursework auto wash shop from scratch. It uses the best quality equipment in our company and offers control remotes working on boards of its own authorship. Our advantages are the performance through online analytics and tulov systems, as well as the quality recognition and assembly of all the electronics work of Aparat. The quality and operation of the control remotes is guaranteed for 1 year. Our goal is to provide an individual approach and professional service to each of our customers. Our experienced team provides the best solutions to suit your needs. We keep track of technologies and trends, so you can always use modern and effective services foydalanasiz.Biz contact and let's start building your future successes together! Start combing with us, putting your business on the road! We will step together towards a promo-blessed business"
 
 #: templates/index.html:47 templates/pages/about.html:23
 msgid "Sifat kafolati"
-msgstr "Гарантия качества"
+msgstr "Quality assurance"
 
 #: templates/index.html:50 templates/pages/about.html:26
 msgid "Tezkor servis xizmati"
-msgstr "Быстрое обслуживание"
+msgstr "Quick service service"
 
 #: templates/index.html:53 templates/pages/about.html:29
 msgid "Qulaylik"
-msgstr "Удобство"
+msgstr "Convenience"
 
 #: templates/index.html:56 templates/pages/about.html:32
 msgid "Zamonaviy texnologiyalar"
-msgstr "Современные технологии"
+msgstr "Digital technology"
 
 #: templates/index.html:74
 msgid "Ommabop Mahsulotlar"
-msgstr "Популярные Продукты"
+msgstr "Popular products"
 
 #: templates/index.html:112
 msgid "Funksiyalar"
-msgstr "Функции"
+msgstr "Functions"
 
 #: templates/index.html:113
 msgid "Mahsulotlarimiz xususiyatlri !"
-msgstr "Особенности нашей продукции !"
+msgstr "Our products are featured !"
 
 #: templates/index.html:132
 msgid "Mijozlar"
-msgstr "Клиенты"
+msgstr "Clients"
 
 #: templates/index.html:133
 msgid "Biz haqimizda mijozlarimiz fikri"
-msgstr "Мнение наших клиентов о нас"
+msgstr "Feedback from our customers about us"
 
 #: templates/index.html:164
 msgid "Hamkorlar"
-msgstr "Партнеры"
+msgstr "Partners"
 
 #: templates/index.html:165
 msgid "Biz haqimizda hamkorlar fikri"
-msgstr "Мнение партнеров о нас"
+msgstr "Opinion of partners about us"
 
 #: templates/pages/contact.html:16
 msgid "Promoy kompaniyasi bilan aloqa"
-msgstr "Связь с промо-компанией"
+msgstr "Association with Promoy"
 
 #: templates/pages/contact.html:20
 msgid ""
 "Promoy – bu yuqori sifatli xizmatlar va innovatsion yechimlar bilan sizning "
 "muvaffaqiyatingizga hissa qo‘shuvchi ishonchli hamkor. Biz sizga o’z-o’ziga "
 "xizmat kursatuvchi avto yuvish shahobchasini qurishda noldan yordam beramiz."
-msgstr "Promoy-это надежный партнер, который способствует вашему успеху благодаря высококачественным услугам и инновационным решениям. Мы поможем вам построить автомойку самообслуживания с нуля."
+msgstr "Promoy is a reliable partner that contributes to your success with high-quality services and innovative solutions. We will help you build a self-service coursework auto wash shop from scratch."
 
 #: templates/pages/contact.html:26
 msgid "Office"
-msgstr "Офис"
+msgstr ""
 
 #: templates/pages/contact.html:35
 msgid "Mobile"
-msgstr "Мобильный"
+msgstr ""
 
 #: templates/pages/contact.html:44
 msgid "Email"
@@ -202,56 +200,56 @@ msgstr ""
 
 #: templates/pages/contact.html:61
 msgid "Ism Familya"
-msgstr "Имя Фамилия"
+msgstr "Full name"
 
 #: templates/pages/contact.html:67
 msgid "Telefon Raqam"
-msgstr "Номер Телефона"
+msgstr "Phone number"
 
 #: templates/pages/contact.html:73
 msgid "Manzil"
-msgstr "Адрес"
+msgstr "Address"
 
 #: templates/pages/contact.html:79
 msgid "Xabar"
-msgstr "Сообщение"
+msgstr "Message"
 
 #: templates/pages/contact.html:83 templates/pages/form.html:145
 msgid "Yuborish"
-msgstr "Отправить"
+msgstr "Send"
 
 #: templates/pages/courses.html:5
 msgid "Mahsolotlar"
-msgstr "Продукты"
+msgstr "Products"
 
 #: templates/pages/courses.html:16
 msgid "Barcha Mahsulotlar"
-msgstr "Все Продукты"
+msgstr "All products"
 
 #: templates/pages/form.html:7
 msgid "ProMoy mahsulotlari"
-msgstr "Промо-продукты"
+msgstr "Promoy products"
 
 #: templates/pages/form.html:127
 msgid "Mahsulotlarni buyurtma qilish"
-msgstr "Заказ продуктов"
+msgstr "Order"
 
 #: templates/pages/form.html:131
 msgid "Ism"
-msgstr "Имя"
+msgstr "Name"
 
 #: templates/pages/form.html:135
 msgid "Telefon raqam"
-msgstr "Номер телефона"
+msgstr "Phone number"
 
 #: templates/pages/form.html:139
 msgid "Mahsulot soni"
-msgstr "Количество продуктов"
+msgstr "Product  count"
 
 #: templates/pages/success.html:4
 msgid "Muvaffaqiyatli"
-msgstr "Успешный"
+msgstr "Successful"
 
 #: templates/pages/success.html:15
 msgid "Xabaringiz muvaffqiyatli yuborildi"
-msgstr "Ваше сообщение успешно отправлено"
+msgstr "Your message was sent in a timely manner"
